--- a/wsserver/package.json
+++ b/wsserver/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "image-to-base64": "^2.1.1",
+    "pi-camera-connect": "^0.3.3",
     "ws": "^7.3.1"
   }
 }
