--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "image-to-base64": "^2.1.1",
-    "pi-camera-connect": "^0.3.3",
+    "node-cmd": "^3.0.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {},
